Fix: use "monospace" for fixed-width output, for improved readability

--- a/docs-template/assets/theme.css
+++ b/docs-template/assets/theme.css
@@ -955,9 +955,6 @@ ol {
       ol li ol ol {
         list-style-type: lower-roman; }
 
-pre, samp, code, kbd {
-  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace; }
-
 article pre, article pre.highlight {
   background-color: #EBE7E2;
   color: #202020;
@@ -967,12 +964,12 @@ article pre, article pre.highlight {
   padding: 0.5rem;
   word-break: break-all;
   word-wrap: break-word;
-  font-size: 0.95rem;
+  font-size: 0.85rem;
   line-height: 1.1rem; }
 
 code {
   padding: 1px 2px;
-  font-size: 0.95rem;
+  font-size: 0.85rem;
   color: #c7254e;
   background-color: #f9f2f4;
   white-space: nowrap;
@@ -980,7 +977,7 @@ code {
 
 pre code {
   padding: 0;
-  font-size: 0.95rem;
+  font-size: 0.85rem;
   color: #202020;
   background-color: #EBE7E2;
   white-space: pre-wrap;
@@ -994,7 +991,7 @@ a code {
 
 kbd {
   font-family: inherit;
-  font-size: 0.9rem;
+  font-size: 0.85rem;
   font-weight: bolder;
   padding: 1px 4px;
   border: 1px solid #a6957e;
@@ -1051,7 +1048,6 @@ code[class*="language-"],
 pre[class*="language-"] {
   color: #3b3c40;
   background: none;
-  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
   text-align: left;
   white-space: pre;
   word-spacing: normal;
@@ -1140,7 +1136,7 @@ pre[class*="language-"]:after {
 .token.prolog,
 .token.doctype,
 .token.cdata {
-  color: #708090; }
+  color: #646b70; }
 
 .token.punctuation {
   color: #5F6364; }
@@ -1151,6 +1147,7 @@ pre[class*="language-"]:after {
 .token.number,
 .token.function-name,
 .token.constant,
+.token.builtin,
 .token.symbol,
 .token.deleted {
   color: #905; }
@@ -1160,21 +1157,23 @@ pre[class*="language-"]:after {
 .token.string,
 .token.char,
 .token.function,
-.token.builtin,
-.token.inserted {
-  color: #690; }
+.token.inserted,
+.token.scope,
+.token.package,
+.token.class-name {
+  color: #4b7924; }
 
 .token.operator,
 .token.entity,
 .token.url,
-.token.variable {
+.token.variable,
+.token.this {
   color: #a67f59; }
 
 .token.atrule,
 .token.attr-value,
-.token.keyword,
-.token.class-name {
-  color: #07a; }
+.token.keyword {
+  color: #2e67ab; }
 
 .token.regex,
 .token.important {
